<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/floatingActionButton_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:clickable="true"
                        app:backgroundTint="@color/fondosplash"
                        app:srcCompat="@drawable/ic_playlist_add_black_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_play"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:clickable="true"
                        app:backgroundTint="@color/fondosplash"
                        app:srcCompat="@drawable/ic_play_arrow_black_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/floatingActionButton_noti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:clickable="true"
                        app:backgroundTint="@color/fondosplash"
                        app:srcCompat="@drawable/ic_add_alert_black_24dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_year_detail" />

                <TextView
                    android:id="@+id/textview_detail_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DATE"
                    android:textColor="@color/color_title"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_description" />

                <TextView
                    android:id="@+id/textview_detail_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Descripcion"
                    android:textColor="@color/color_title"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_language" />

                <TextView
                    android:id="@+id/textview_detail_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="language"
                    android:textColor="@color/color_title"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_category" />

                <LinearLayout
                    android:id="@+id/list_categori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_count_votos"
                        android:textColor="@color/color_title"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView_detail_count"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/background_info"
                        android:gravity="center"
                        android:text="55" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_count_populary"
                        android:textColor="@color/color_title"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/textView_detail_populary"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/background_info"
                        android:gravity="center"
                        android:text="77" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Copyright" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>